--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,9 +19,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest sphinx
         pip install .
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Build docs
+      run: |
+        sphinx-build source build
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -31,3 +34,4 @@ jobs:
     - name: Run examples
       run: |
         python examples/dev.py
+
