changed sphinx path

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Build docs
       run: |
-        sphinx-build source build
+        sphinx-build docs/source docs/build
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
