--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Github pages deploy
 
 on:
   push:
@@ -19,6 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install sphinx sphinx-rtd-theme
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Build docs
       run: |
         sphinx-build docs/source docs
