--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-numpy~=1.20.1
-scipy~=1.6.1
-thermo~=0.1.40
+numpy~=1.20.3
+scipy~=1.6.3
+CoolProp~=6.4.1
 matplotlib~=3.3.4
-setuptools~=54.1.2
-pypropep~=0.1.4
